--- a/problems/动态规划理论基础.md
+++ b/problems/动态规划理论基础.md
@@ -83,7 +83,7 @@
 
 然后再写代码，如果代码没通过就打印dp数组，看看是不是和自己预先推导的哪里不一样。
 
-如果打印出来和自己预先模拟推导是一样的，那么就是自己的递归公式、初始化或者遍历顺序有问题了。
+如果打印出来和自己预先模拟推导是不一样的，那么就是自己的递归公式、初始化或者遍历顺序有问题了。
 
 如果和自己预先模拟推导的不一样，那么就是代码实现细节有问题。
 
